@@ -8,7 +8,16 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ContextConfiguration;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
-import software.amazon.awssdk.services.dynamodb.model.*;
+import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
+import software.amazon.awssdk.services.dynamodb.model.BatchWriteItemRequest;
+import software.amazon.awssdk.services.dynamodb.model.DeleteRequest;
+import software.amazon.awssdk.services.dynamodb.model.DescribeTableRequest;
+import software.amazon.awssdk.services.dynamodb.model.DescribeTableResponse;
+import software.amazon.awssdk.services.dynamodb.model.KeySchemaElement;
+import software.amazon.awssdk.services.dynamodb.model.ResourceNotFoundException;
+import software.amazon.awssdk.services.dynamodb.model.ScanRequest;
+import software.amazon.awssdk.services.dynamodb.model.ScanResponse;
+import software.amazon.awssdk.services.dynamodb.model.WriteRequest;
 
 import java.time.Duration;
 import java.util.Collections;
@@ -20,9 +29,10 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @SpringBootTest
 @ContextConfiguration(classes = DynamoTestConfig.class, initializers = DynamoTestConfig.Initializer.class)
@@ -32,7 +42,7 @@ class DynamoIdempotentServiceIntegrationTest {
     private DynamoDbClient dynamoDbClient;
 
     @Value("${idempotent.dynamodb.table.name:Idempotent}")
-    private String dynamoTableName;
+    private String dynamoTableName = "Idempotent";
 
     @Autowired
     private IdempotentService idempotentService;
@@ -74,7 +84,7 @@ class DynamoIdempotentServiceIntegrationTest {
                                             DeleteRequest.builder().key(keyMap).build())
                                     .build();
                         })
-                        .collect(Collectors.toList());
+                        .toList();
 
                 if (!deleteRequests.isEmpty()) {
                     BatchWriteItemRequest batchWriteItemRequest = BatchWriteItemRequest.builder()
@@ -97,20 +107,20 @@ class DynamoIdempotentServiceIntegrationTest {
         Supplier<String> operation = () -> "result-" + counter.incrementAndGet();
 
         // First execution
-        String result1 = idempotentService.execute("test-key", operation, Duration.ofSeconds(300));
+        String result1 = idempotentService.execute("test-key", operation, Duration.ofMinutes(5));
         assertEquals("result-1", result1);
         assertEquals(1, counter.get());
 
         // Second execution should return cached result
-        String result2 = idempotentService.execute("test-key", operation, Duration.ofSeconds(300));
+        String result2 = idempotentService.execute("test-key", operation, Duration.ofMinutes(5));
         assertEquals("result-1", result2);
         assertEquals(1, counter.get()); // Counter should not increment
     }
 
     @Test
     void testServiceConcurrentExecution() throws Exception {
-        AtomicInteger executionCount = new AtomicInteger(0);
-        String expectedResult = "result-" + (executionCount.incrementAndGet());
+        int executionCount = 0;
+        String expectedResult = "result-" + ++executionCount;
 
         Supplier<String> operation = () -> {
             try {
@@ -129,7 +139,7 @@ class DynamoIdempotentServiceIntegrationTest {
         CompletableFuture<String>[] futures = new CompletableFuture[5];
         for (int i = 0; i < 5; i++) {
             futures[i] = CompletableFuture.supplyAsync(
-                    () -> idempotentService.execute("concurrent-key", operation, Duration.ofSeconds(300)), executor);
+                    () -> idempotentService.execute("concurrent-key", operation, Duration.ofMinutes(5)), executor);
         }
 
         // Wait for all to complete
@@ -142,7 +152,7 @@ class DynamoIdempotentServiceIntegrationTest {
         }
 
         // Operation should have executed only once
-        assertEquals(1, executionCount.get());
+        assertEquals(1, executionCount);
 
         executor.shutdown();
     }
@@ -156,22 +166,22 @@ class DynamoIdempotentServiceIntegrationTest {
         Supplier<String> operation = () -> "result-" + counter.incrementAndGet();
 
         // Test 1: First call with process-1 should execute and increment counter to 1
-        String result1 = idempotentService.execute(key, "process-1", operation, Duration.ofSeconds(300));
+        String result1 = idempotentService.execute(key, "process-1", operation, Duration.ofMinutes(5));
         assertEquals("result-1", result1);
         assertEquals(1, counter.get(), "First call should execute the operation once");
 
         // Test 2: Same key and same process should return cached result without executing
-        String result2 = idempotentService.execute(key, "process-1", operation, Duration.ofSeconds(300));
+        String result2 = idempotentService.execute(key, "process-1", operation, Duration.ofMinutes(5));
         assertEquals("result-1", result2, "Same key and process should return cached result");
         assertEquals(1, counter.get(), "Counter should remain 1 for same key and process");
 
         // Test 3: Same key but different process name should execute again and increment counter to 2
-        String result3 = idempotentService.execute(key, "process-2", operation, Duration.ofSeconds(300));
+        String result3 = idempotentService.execute(key, "process-2", operation, Duration.ofMinutes(5));
         assertEquals("result-2", result3, "Different process should execute again");
         assertEquals(2, counter.get(), "Counter should increment to 2 for different process");
 
         // Test 4: Back to first process name should still return cached result
-        String result4 = idempotentService.execute(key, "process-1", operation, Duration.ofSeconds(300));
+        String result4 = idempotentService.execute(key, "process-1", operation, Duration.ofMinutes(5));
         assertEquals("result-1", result4, "Original process should still get cached result");
         assertEquals(2, counter.get(), "Counter should remain at 2");
     }
@@ -184,16 +194,14 @@ class DynamoIdempotentServiceIntegrationTest {
 
         // First call should fail
         assertThrows(
-                Exception.class,
-                () -> idempotentService.execute("error-key", failingOperation, Duration.ofSeconds(300)));
+                Exception.class, () -> idempotentService.execute("error-key", failingOperation, Duration.ofMinutes(5)));
 
         // Second call should also fail (no caching of errors)
         assertThrows(
-                Exception.class,
-                () -> idempotentService.execute("error-key", failingOperation, Duration.ofSeconds(300)));
+                Exception.class, () -> idempotentService.execute("error-key", failingOperation, Duration.ofMinutes(5)));
 
         // Successful operation after failures should work
-        String result = idempotentService.execute("test-key-1", () -> "success", Duration.ofSeconds(300));
+        String result = idempotentService.execute("test-key-1", () -> "success", Duration.ofMinutes(5));
         assertEquals("success", result);
     }
 
@@ -201,12 +209,12 @@ class DynamoIdempotentServiceIntegrationTest {
     void testServiceWithComplexObjects() {
         Supplier<TestData> operation = () -> new TestData("test-name", 42);
 
-        TestData result1 = idempotentService.execute("complex-key", operation, Duration.ofSeconds(300));
+        TestData result1 = idempotentService.execute("complex-key", operation, Duration.ofMinutes(5));
         assertNotNull(result1);
         assertEquals("test-name", result1.name);
         assertEquals(42, result1.value);
 
-        TestData result2 = idempotentService.execute("complex-key", operation, Duration.ofSeconds(300));
+        TestData result2 = idempotentService.execute("complex-key", operation, Duration.ofMinutes(5));
         assertNotNull(result2);
         assertEquals("test-name", result2.name);
         assertEquals(42, result2.value);
@@ -215,10 +223,6 @@ class DynamoIdempotentServiceIntegrationTest {
     public static class TestData {
         public String name;
         public int value;
-
-        public TestData() {
-            // Default constructor for Jackson
-        }
 
         public TestData(String name, int value) {
             this.name = name;
